--- a/TicTacToe_JS/package.json
+++ b/TicTacToe_JS/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "webpack": "^2.3.3",
+    "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0"
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "^6.23.0",
+    "source-map-loader": "^0.2.3",
+    "typescript": "^2.6.2",
+    "webpack": "^2.3.3"
   }
 }
